feat: add tailwind, react and shadcn

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,9 @@
 ---
+import { Button } from "@/components/ui/button";
 import Layout from "@/layouts/Layout.astro";
-
 ---
 
 <Layout>
-  <p class="text-red-500">Hello world!</p>
+  <h1 class="text-red-500 text-3xl font-secondary">Bussiness Coach Training</h1>
+  <Button variant="accent">Click me</Button>
 </Layout>
