--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,6 +1,8 @@
 ---
 import { cn } from "@/lib/utils"
 import { buttonVariants } from "./ui/button"
+import { Image } from "astro:assets"
+import logo from "@/assets/restore.webp"
 
 const links = [
   { href: "/about", text: "About" },
@@ -12,12 +14,9 @@ const links = [
 ---
 
 <nav class="flex container py-4 items-center justify-between">
-  <div class="">
-    <p class="font-secondary text-primary text-xl">BRITTANY JONES</p>
-    <p class="font-primary text-accent uppercase text-[10px] tracking-[0.32em]">
-      Buissness Coaching
-    </p>
-  </div>
+  <a href="/" class="flex items-center">
+    <Image src={logo} alt="Logo" class="w-36" />
+  </a>
   <div class="flex gap-8 items-center">
     {
       links.map((link) => (
