--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,9 @@
 ---
-import { Button } from "@/components/ui/button";
-import Layout from "@/layouts/Layout.astro";
+import Banner from "@/components/Banner.astro"
+import { Button } from "@/components/ui/button"
+import Layout from "@/layouts/Layout.astro"
 ---
 
 <Layout>
-  <div class="bg-background-secondary">
-    <h1 class="text-heading text-3xl font-secondary">Bussiness Coach Training</h1>
-    <p class="text-text">
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati molestiae aspernatur inventore rem qui laboriosam dicta quasi quia quibusdam quae debitis voluptates vero cumque earum accusantium atque nihil, distinctio iusto.
-    </p>
-  <Button variant="accent">Click me</Button>
-  </div>
+  <Banner />
 </Layout>
