--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,6 +32,7 @@
     --chart-5: #f4a462;
     --text: #7f858d;
     --heading: #0b0a13;
+    --highlight: #cee0df;
   }
 
   .dark {
@@ -74,7 +75,28 @@
   h6 {
     @apply font-secondary;
   }
+
   body {
     @apply bg-background text-foreground;
+  }
+
+  .marker-underline {
+    position: relative;
+    display: inline-block;
+  }
+
+  .marker-underline::after {
+    content: "";
+    position: absolute;
+    left: 0%;
+    bottom: 2px;
+    width: 100%;
+    height: 14px;
+    background: #cee0df;
+    z-index: -1;
+  }
+
+  .module {
+    @apply my-20;
   }
 }
