--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -6,8 +6,15 @@ import { cn } from "@/lib/utils"
 type Props = HTMLAttributes<"a"> & {
   href: string | { pathname: string; query?: Record<string, string> }
   asButton?: Parameters<typeof buttonVariants>[0] | boolean
+  className?: string
 }
-const { href: rawHref = "", style, asButton, ...attrs } = Astro.props as Props
+const {
+  href: rawHref = "",
+  style,
+  asButton,
+  className,
+  ...attrs
+} = Astro.props as Props
 const href = (() => {
   if (typeof rawHref === "string") {
     return rawHref
@@ -51,7 +58,8 @@ const isDefaultButton = asButton === true
   class={cn(
     isDefaultButton
       ? buttonVariants()
-      : asButton && !_.isEmpty(asButton) && buttonVariants(asButton)
+      : asButton && !_.isEmpty(asButton) && buttonVariants(asButton),
+    className
   )}
   {...styleAttribute}
   {...relAttribute}
