--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import Banner from "@/components/Banner.astro"
+import CardModule from "@/components/CardModule.astro"
 import { Button } from "@/components/ui/button"
 import Layout from "@/layouts/Layout.astro"
 ---
 
 <Layout>
   <Banner />
+  <CardModule />
 </Layout>
