feat: add steps module

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -18,9 +18,9 @@ const { title, body, icon } = Astro.props
       <icon></icon>
     </div>
     <div class="flex-1">
-      <h2 class="text-heading font-secondary text-xl tracking-wide">
+      <h3 class="">
         {title}
-      </h2>
+      </h3>
       <p class="pt-3">
         {body}
       </p>
