--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Banner from "@/components/Banner.astro"
 import CardModule from "@/components/CardModule.astro"
+import StepsModule from "@/components/StepsModule.astro"
 import { Button } from "@/components/ui/button"
 import Layout from "@/layouts/Layout.astro"
 ---
@@ -8,4 +9,5 @@ import Layout from "@/layouts/Layout.astro"
 <Layout>
   <Banner />
   <CardModule />
+  <StepsModule />
 </Layout>
