--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,7 @@
     --background: #ffffff;
     --background-secondary: #effdfc;
     --background-tertiary: #e7f0f0;
+    --background-green: #247370;
     --foreground: #020817;
     --card: #ffffff;
     --card-foreground: #020817;
@@ -14,7 +15,7 @@
     --popover-foreground: #020817;
     --primary: #0c6460;
     --primary-foreground: #f8fafc;
-    --secondary: #f1f5f9;
+    --secondary: #9bc4c1;
     --secondary-foreground: #0f172a;
     --muted: #f1f5f9;
     --muted-foreground: #64748b;
@@ -34,6 +35,7 @@
     --text: #7f858d;
     --heading: #0b0a13;
     --highlight: #cee0df;
+    --highlight-dark: #1d8882;
   }
 
   .dark {
@@ -85,6 +87,10 @@
     @apply text-heading text-4xl font-secondary leading-tight;
   }
 
+  h3 {
+    @apply text-heading font-secondary text-xl tracking-wide;
+  }
+
   body {
     @apply bg-background text-foreground;
   }
@@ -111,10 +117,10 @@
   }
 
   .module-m {
-    @apply my-20;
+    @apply my-24;
   }
 
   .module-p {
-    @apply py-20;
+    @apply py-24;
   }
 }
