feat: team module

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Banner from "@/components/Banner.astro"
 import CardModule from "@/components/CardModule.astro"
 import StepsModule from "@/components/StepsModule.astro"
+import TeamModule from "@/components/TeamModule.astro"
 import { Button } from "@/components/ui/button"
 import Layout from "@/layouts/Layout.astro"
 ---
@@ -10,4 +11,5 @@ import Layout from "@/layouts/Layout.astro"
   <Banner />
   <CardModule />
   <StepsModule />
+  <TeamModule />
 </Layout>
