feat: add highlights module

--- a/src/components/TeamModule.astro
+++ b/src/components/TeamModule.astro
@@ -47,4 +47,7 @@ const stats = [
       </div>
     </div>
   </div>
+  <div class="px-20">
+    <div class="module-m border-b border-border"></div>
+  </div>
 </div>
