--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import TeamModule from "@/components/TeamModule.astro"
 import Layout from "@/layouts/Layout.astro"
 import Highlights from "@/components/Highlights"
 import { getImage } from "astro:assets"
+import MakeDifferenceModule from "@/components/MakeDifferenceModule.astro"
 
 const images = [
   "https://primary.jwwb.nl/public/i/s/s/temp-pngwxxidlofdmrlcdpbo/qr52ur/orphanage6.jpeg?enable-io=true&enable=upscale&fit=bounds&width=900&height=643",
@@ -42,4 +43,5 @@ const optimizedImages = await Promise.all(
   <StepsModule />
   <TeamModule />
   <Highlights client:only="react" images={optimizedImages} />
+  <MakeDifferenceModule />
 </Layout>
