--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -13,7 +13,7 @@ const { title, body, icon } = Astro.props
 
 <div class="p-7 bg-background shadow-sm rounded-xl">
   <div class="flex flex-col gap-6">
-    <div class="size-20 rounded-full bg-background-tertiary p-4">
+    <div class="size-[72px] rounded-full bg-background-tertiary p-4">
       <Image src={icon} alt="icon" class="w-full h-full" />
       <icon></icon>
     </div>
