--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,13 +4,17 @@ import { buttonVariants } from "./ui/button"
 import { Image } from "astro:assets"
 import logo from "@/assets/restore.webp"
 import { links } from "@/lib/constants"
+import BurgerMenu from "./BurgerMenu"
 ---
 
-<nav class="flex container py-4 items-center justify-between">
+<nav
+  class="flex container py-4 items-center justify-between shadow-md fixed top-0 left-0 right-0 z-50 bg-white"
+>
   <a href="/" class="flex items-center">
-    <Image src={logo} alt="Logo" class="w-36" />
+    <Image src={logo} alt="Logo" class="w-32 md:w-36" />
   </a>
-  <div class="flex gap-8 items-center">
+  <BurgerMenu client:only="react" />
+  <div class="md:flex gap-8 items-center hidden">
     {
       links.map((link) => (
         <a href={link.href} class="text-text text-sm">
