feat: make banner responsive

--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -5,8 +5,8 @@ import WavesPattern from "@/assets/waves-pattern.png"
 import Link from "./Link.astro"
 ---
 
-<div class="container module-m">
-  <div class="flex items-center gap-32">
+<div class="container module-m mt-12">
+  <div class="grid md:flex items-center gap-12 md:gap-16 lg:gap-32">
     <div class="flex-1">
       <h1 class="relative">
         Lifestyle Coaching Can <span
