--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,6 +40,7 @@ const optimizedImages = await Promise.all(
 ---
 
 <Layout>
+  <div class="pt-[var(--header-height)]"></div>
   <Banner />
   <CardModule />
   <StepsModule />
