--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,6 +36,11 @@
     --heading: #0b0a13;
     --highlight: #cee0df;
     --highlight-dark: #1d8882;
+    --header-height: 4rem;
+
+    @media screen and (min-width: 768px) {
+      --header-height: 5rem;
+    }
   }
 
   .dark {
@@ -80,7 +85,18 @@
   }
 
   h1 {
-    @apply text-heading text-5xl font-secondary leading-tight;
+    color: theme("colors.heading");
+    font-size: 2.25rem;
+    line-height: theme("lineHeight.tight");
+    font-family: theme("fontFamily.secondary");
+
+    @media screen and (min-width: 768px) {
+      font-size: 2.6rem;
+    }
+
+    @media screen and (min-width: 1024px) {
+      font-size: 3rem;
+    }
   }
 
   h2 {
@@ -117,11 +133,23 @@
   }
 
   .module-m {
-    @apply my-24;
+    margin-top: 4rem;
+    margin-bottom: 4rem;
+
+    @media screen and (min-width: 768px) {
+      margin-top: 6rem;
+      margin-bottom: 6rem;
+    }
   }
 
   .module-p {
-    @apply py-24;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+
+    @media screen and (min-width: 768px) {
+      padding-top: 6rem;
+      padding-bottom: 6rem;
+    }
   }
 }
 
