--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,8 +1,8 @@
 ---
-import Header from "@/components/Header.astro"
-import "@/styles/globals.css"
+import Header from "@/components/Header.astro";
+import "@/styles/globals.css";
 
-const { title = "RLCT" } = Astro.props
+const { title = "RLCT" } = Astro.props;
 ---
 
 <!doctype html>
