--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -1,36 +1,36 @@
 ---
-import { Image } from "astro:assets"
-import bannerImg from "@/assets/restoreStaffs.png"
-import WavesPattern from "@/assets/waves-pattern.png"
-import Link from "./Link.astro"
+import { Image } from "astro:assets";
+import bannerImg from "@/assets/restoreStaffs.png";
+import WavesPattern from "@/assets/waves-pattern.png";
+import Link from "./Link.astro";
 ---
 
-<div class="container module-m mt-12">
-  <div class="grid md:flex items-center gap-12 md:gap-16 lg:gap-32">
+<div class="module-m container mt-12 md:mt-20 lg:mt-24">
+  <div class="grid items-center gap-12 md:flex md:gap-16 lg:gap-32">
     <div class="flex-1">
       <h1 class="relative">
         Lifestyle Coaching Can <span
-          class="font-secondary text-primary marker-underline"
+          class="marker-underline font-secondary text-primary"
           >Change Lives</span
         >
       </h1>
-      <p class="pt-6 text-sm text-text leading-relaxed">
+      <p class="pt-6 text-sm leading-relaxed text-text">
         Lifestyle coaches are caring individuals who guide and educate their
         clients to discover a healthier lifestyle. By joining our training, you
         can gain confidence to help people reverse or reduce conditions like
         diabetes, hypertension and obesity.
       </p>
-      <div class="flex pt-8 gap-4">
+      <div class="flex gap-4 pt-8">
         <Link href="/" asButton={{ variant: "accent" }}>Learn More</Link>
         <Link href={"/"} asButton={{ variant: "outline" }}>Apply Now</Link>
       </div>
     </div>
-    <div class="relative flex-1 rounded-3xl overflow-hidden">
+    <div class="relative flex-1 overflow-hidden rounded-3xl">
       <Image src={WavesPattern} alt="banner" class="absolute h-full" />
       <Image
         src={bannerImg}
         alt="banner"
-        class="w-full h-full relative z-10 pt-7 object-contain"
+        class="relative z-10 h-full w-full object-contain pt-7"
       />
     </div>
   </div>
