--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,21 +1,20 @@
 ---
-import type { ImageMetadata } from "astro"
-import { Image } from "astro:assets"
+import type { ImageMetadata } from "astro";
+import { Image } from "astro:assets";
 
 interface Props {
-  title: string
-  body: string
-  icon: ImageMetadata
+  title: string;
+  body: string;
+  icon: ImageMetadata;
 }
 
-const { title, body, icon } = Astro.props
+const { title, body, icon } = Astro.props;
 ---
 
-<div class="p-7 bg-background shadow-sm rounded-xl">
+<div class="rounded-xl bg-background p-7 shadow-sm">
   <div class="flex flex-col gap-6">
     <div class="size-[72px] rounded-full bg-background-tertiary p-4">
-      <Image src={icon} alt="icon" class="w-full h-full" />
-      <icon></icon>
+      <Image src={icon} alt="icon" class="h-full w-full" />
     </div>
     <div class="flex-1">
       <h3 class="">
