--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,56 +1,56 @@
 ---
-import type { HTMLAttributes } from "astro/types"
-import _ from "lodash"
-import { buttonVariants } from "./ui/button"
-import { cn } from "@/lib/utils"
+import type { HTMLAttributes } from "astro/types";
+import _ from "lodash";
+import { buttonVariants } from "./ui/button";
+import { cn } from "@/lib/utils";
 type Props = HTMLAttributes<"a"> & {
-  href: string | { pathname: string; query?: Record<string, string> }
-  asButton?: Parameters<typeof buttonVariants>[0] | boolean
-  className?: string
-}
+  href: string | { pathname: string; query?: Record<string, string> };
+  asButton?: Parameters<typeof buttonVariants>[0] | boolean;
+  className?: string;
+};
 const {
   href: rawHref = "",
   style,
   asButton,
   className,
   ...attrs
-} = Astro.props as Props
+} = Astro.props as Props;
 const href = (() => {
   if (typeof rawHref === "string") {
-    return rawHref
+    return rawHref;
   }
-  const { pathname, query } = rawHref
-  const searchParams = new URLSearchParams(query)
-  return `${pathname}?${searchParams.toString()}`
-})()
-const site = Astro.site
-const { pathname } = Astro.url
+  const { pathname, query } = rawHref;
+  const searchParams = new URLSearchParams(query);
+  return `${pathname}?${searchParams.toString()}`;
+})();
+const site = Astro.site;
+const { pathname } = Astro.url;
 // function isActiveLink(url: string): boolean {
 //   return url === pathname || url === "." || url === "./"
 // }
 function isExternalLink(url: string): boolean {
-  return URL.canParse(url)
+  return URL.canParse(url);
 }
 function isInternalLink(url: string): boolean {
-  return URL.canParse(url, site?.toString())
+  return URL.canParse(url, site?.toString());
 }
-const isExternal = isExternalLink(href)
-const isInternal = isInternalLink(href)
+const isExternal = isExternalLink(href);
+const isInternal = isInternalLink(href);
 // const isActive = isActiveLink(href)
-let relAttribute: object = {}
-let targetAttribute: object = {}
-let styleAttribute: object = {}
+let relAttribute: object = {};
+let targetAttribute: object = {};
+let styleAttribute: object = {};
 if (isExternal) {
-  relAttribute = { rel: "external noreferrer" }
+  relAttribute = { rel: "external noreferrer" };
   // rel 'nooppener' is implict with target '_blank' - https://www.stefanjudis.com/today-i-learned/target-blank-implies-rel-noopener/
-  targetAttribute = { target: "_blank" }
+  targetAttribute = { target: "_blank" };
 }
 // else if (!isInternal && isActive) {
 //   relAttribute = {}
 //   styleAttribute = { style: "color: red;" }
 // }
 
-const isDefaultButton = asButton === true
+const isDefaultButton = asButton === true;
 ---
 
 <a
@@ -59,7 +59,7 @@ const isDefaultButton = asButton === true
     isDefaultButton
       ? buttonVariants()
       : asButton && !_.isEmpty(asButton) && buttonVariants(asButton),
-    className
+    className,
   )}
   {...styleAttribute}
   {...relAttribute}
