--- a/src/components/ModuleBackground.astro
+++ b/src/components/ModuleBackground.astro
@@ -1,14 +1,14 @@
 ---
-import { Image } from "astro:assets"
-import WavesPattern from "@/assets/waves-pattern.png"
-import { cn } from "@/lib/utils"
+import { Image } from "astro:assets";
+import WavesPattern from "@/assets/waves-pattern.png";
+import { cn } from "@/lib/utils";
 
 interface Props {
-  className?: string
-  wrapperClassName?: string
+  className?: string;
+  wrapperClassName?: string;
 }
 
-const { className, wrapperClassName } = Astro.props
+const { className, wrapperClassName } = Astro.props;
 ---
 
 <div class={cn("", wrapperClassName)}>
@@ -17,9 +17,9 @@ const { className, wrapperClassName } = Astro.props
       <Image
         src={WavesPattern}
         alt="banner"
-        class="absolute top-0 object-cover w-full"
+        class="absolute top-0 size-full object-cover"
       />
-      <div class={cn("relative z-10 p-20", className)}>
+      <div class={cn("relative z-10 p-10 md:p-14 lg:p-20", className)}>
         <slot />
       </div>
     </div>
